@@ -2,7 +2,7 @@
 # Changes of OTRS 
 # Copyright (C) 2002-2003 Martin Edenhofer <martin+code@otrs.org>
 # --
-# $Id: CHANGES,v 1.89 2003-08-22 12:02:17 martin Exp $
+# $Id: CHANGES,v 1.90 2003-08-22 15:19:57 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see 
 # the enclosed file COPYING for license information (GPL). If you 
@@ -39,6 +39,8 @@ CVS HEAD
 1.1.4 (2003-??-??)
  - (2003/08/22) fixed ascii2html convert fucktion for "\n" -> "<br>\n" and
     "  " -> " &nbsp;".
+ - (2003/08/22) fixed customer user lookup for PostMaster*.pl based on
+    senders email address (set customer id and customer user)
 
 1.1.3 (2003-07-12)
  - (2003/07/12) fixed bug 182 - Error when modify an queue without a queue-name
